--- a/policies/basketflow/policy.html
+++ b/policies/basketflow/policy.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Política de Seguridad - Chatbot BasketFlow Baloncesto Venezolano</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Política de Seguridad para Chatbot BasketFlow de Información sobre Baloncesto Venezolano</h1>
 
+    <section>
+        <h2>1. Introducción</h2>
+        <p>Esta política de seguridad describe las medidas que tomamos para proteger la información que recopila y utiliza nuestro chatbot informativo sobre baloncesto venezolano. Nos comprometemos a mantener la seguridad y privacidad de los datos de nuestros usuarios y a cumplir con las leyes de protección de datos aplicables.</p>
+    </section>
+
+    <section>
+        <h2>2. Recopilación de datos</h2>
+        <p>Nuestro chatbot recopila principalmente información pública sobre el baloncesto venezolano, como estadísticas de jugadores, resultados de partidos y noticias de equipos. En algunos casos, podemos recopilar información proporcionada por los usuarios, como sus preferencias de equipos o jugadores. No recopilamos datos personales sensibles, como información financiera o de salud.</p>
+    </section>
+
+    <section>
+        <h2>3. Uso de datos</h2>
+        <p>Utilizamos los datos recopilados para proporcionar información precisa y actualizada sobre el baloncesto venezolano a nuestros usuarios. Podemos utilizar los datos para personalizar la experiencia del usuario, como mostrarle noticias de sus equipos favoritos. No compartimos los datos de los usuarios con terceros, excepto cuando sea necesario para cumplir con la ley.</p>
+    </section>
+
+    <section>
+        <h2>4. Seguridad de los datos</h2>
+        <p>Implementamos medidas de seguridad técnicas y organizativas para proteger los datos de los usuarios contra accesos no autorizados, pérdidas o alteraciones. Utilizamos cifrado para proteger la comunicación entre el chatbot y los usuarios. Realizamos copias de seguridad periódicas de los datos para garantizar su disponibilidad.</p>
+    </section>
+
+    <section>
+        <h2>5. Privacidad del usuario</h2>
+        <p>Informamos a los usuarios sobre cómo recopilamos y utilizamos sus datos a través de esta política de seguridad. Permitimos a los usuarios controlar sus datos y ejercer sus derechos de privacidad. No recopilamos datos de menores de edad sin el consentimiento de sus padres o tutores.</p>
+    </section>
+
+    <section>
+        <h2>6. Cambios en la política de seguridad</h2>
+        <p>Podemos actualizar esta política de seguridad periódicamente para reflejar cambios en nuestras prácticas de seguridad. Notificaremos a los usuarios sobre cualquier cambio importante en la política de seguridad.</p>
+    </section>
+
+    <section>
+        <h2>7. Contacto</h2>
+        <p>Si tienes alguna pregunta o inquietud sobre nuestra política de seguridad, puedes contactarnos a través de compulon@gmail.com.</p>
+    </section>
+
+</body>
+</html>
