Update privacy policy section in index.html

--- a/index.html
+++ b/index.html
@@ -420,16 +420,62 @@
 
     <section id="politica-privacidad">
         <div class="container">
-            <h2 id="privacyTitle">Política de Privacidad</h2>
+            <h2 id="privacyTitle">Política de Privacidad MedicalFlow App</h2>
             <div class="content">
-                <h3 id="privacy1Title">Protección de Datos</h3>
-                <p id="privacy1Text">Nos comprometemos a proteger la privacidad de nuestros clientes y usuarios mediante protocolos de seguridad avanzados y cumplimiento con las normativas de protección de datos vigentes.</p>
+                <h3 id="privacy1Title">1. Introducción</h3>
+                <p id="privacy1Text">MedicalFlow es una aplicación desarrollada por MazinBot Technologies, C.A., cuyo propósito es automatizar la gestión de citas médicas mediante la API oficial de WhatsApp Business y la tecnología de WhatsApp Flows. A través de MedicalFlow, médicos, clínicas y centros de salud pueden comunicarse con sus pacientes de manera eficiente, automatizada y segura. La presente política describe cómo se recopilan, utilizan y protegen los datos personales y los datos de la plataforma de Meta utilizados por MedicalFlow.</p>
                 
-                <h3 id="privacy2Title">Uso de la Información</h3>
-                <p id="privacy2Text">Los datos proporcionados se utilizan exclusivamente para prestar y mejorar nuestros servicios, garantizando siempre la confidencialidad y seguridad de la información.</p>
+                <h3 id="privacy2Title">2. Responsable del tratamiento de los datos</h3>
+                <p id="privacy2Text">MazinBot Technologies, C.A.: Responsable del tratamiento de los datos personales y de los datos de la plataforma de Meta asociados al funcionamiento de MedicalFlow. Correo de contacto: soporte@mazinbot.com</p>
                 
-                <h3 id="privacy3Title">Cookies y Tecnologías Similares</h3>
-                <p id="privacy3Text">Este sitio web utiliza cookies técnicas necesarias para su funcionamiento y cookies analíticas para mejorar la experiencia del usuario, siempre con su consentimiento.</p>
+                <h3 id="privacy3Title">3. Datos que se recopilan</h3>
+                <p id="privacy3Text">MedicalFlow recopila únicamente la información necesaria para el funcionamiento del servicio, la cual puede incluir:
+
+Nombre, número de teléfono y correo electrónico del paciente o usuario final.
+Datos administrativos del profesional o clínica (nombre, dirección, número de WhatsApp Business, ID de cuenta comercial).
+Datos técnicos proporcionados por Meta, tales como identificadores de cuenta, tokens de acceso, plantillas aprobadas y metadatos asociados a mensajes.
+
+
+
+MedicalFlow no recopila ni almacena historiales clínicos, diagnósticos médicos ni datos sensibles de salud.</p>
+                <h3 id="privacy4Title">4. Finalidad del tratamiento de los datos</h3>
+                <p id="privacy4Text">Los datos recopilados se utilizan exclusivamente para:
+
+Agendar, confirmar o modificar citas médicas a solicitud del paciente o del médico.
+Enviar recordatorios automatizados mediante WhatsApp.
+Mostrar al médico o clínica un panel con el estado de sus citas y mensajes.
+Permitir la gestión de cuentas de WhatsApp Business conectadas a la app.
+MazinBot Technologies no utiliza los datos con fines publicitarios ni comerciales y no realiza envíos masivos de mensajes no solicitados.</p>
+                <h3 id="privacy5Title">5. Uso de los datos de la plataforma de Meta</h3>
+                <p id="privacy5Text">MedicalFlow accede a datos de la plataforma de Meta (por ejemplo, identificadores de cuenta y tokens de acceso) para permitir que cada cuenta médica pueda comunicarse con sus pacientes mediante la API oficial de WhatsApp Business.
+Estos datos se usan únicamente para:
+
+Establecer la conexión entre el número de WhatsApp del cliente y la aplicación.
+Enviar y recibir mensajes transaccionales y de servicio.
+Administrar plantillas de mensajes aprobadas por Meta.
+
+
+
+MedicalFlow no comparte, vende ni divulga los datos de la plataforma de Meta a terceros.</p>
+                <h3 id="privacy6Title">6. Conservación y eliminación de los datos</h3>
+                <p id="privacy6Text">Los datos se conservan únicamente durante la relación comercial con el cliente o mientras sean necesarios para la prestación del servicio.
+Cuando el cliente cancela su suscripción o solicita la eliminación de datos, MazinBot Technologies elimina toda la información de manera definitiva y segura.</p>
+                <h3 id="privacy7Title">7. Seguridad de la información</h3>
+                <p id="privacy7Text">MazinBot Technologies aplica medidas técnicas y organizativas apropiadas para proteger la información, incluyendo:
+
+Encriptación de datos en tránsito y en reposo.
+Acceso restringido solo a personal autorizado.
+Monitoreo y registro de accesos a la API.
+Copias de seguridad cifradas.</p>
+                <h3 id="privacy8Title">8. Derechos de los usuarios</h3>
+                <p id="privacy8Text">Los usuarios y clientes pueden ejercer sus derechos de acceso, rectificación, eliminación o portabilidad de datos enviando una solicitud a privacidad@mazinbot.com.
+Todas las solicitudes serán atendidas conforme a la legislación aplicable en materia de protección de datos personales.</p>
+                <h3 id="privacy9Title">9. Transferencias internacionales</h3>
+                <p id="privacy9Text">MedicalFlow puede procesar información en servidores ubicados fuera del país de origen del usuario, garantizando siempre un nivel adecuado de protección de datos y cumpliendo las políticas de Meta en relación con la transferencia y uso de datos.</p>
+                <h3 id="privacy10Title">10. Solicitudes de autoridades públicas</h3>
+                <p id="privacy9Text">MazinBot Technologies no ha recibido solicitudes de acceso a datos por motivos de seguridad nacional ni ha compartido datos con autoridades públicas.
+En caso de recibir una solicitud, esta será evaluada legalmente y se divulgará únicamente la mínima información necesaria y conforme a la ley.</p>
+
             </div>
         </div>
     </section>
